ffix: prevent scrollbars in firefox browser

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -10,6 +10,8 @@ html, body {
 
   background-color: $c_base;
   color: $c_second;
+
+  overflow: hidden;
 }
 
 *, *:after, *:before {
